--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,37 @@ body {
   font-weight: bold;
 }
 
+.pagination {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.pagination__page {
+  padding: 5px;
+  min-width: 30px;
+  border: 1px solid rgb(146, 146, 146);
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+  margin: 0 2px;
+  display: flex;
+  background: none;
+}
+
+.pagination__page:hover {
+  cursor: pointer;
+  border-width: 3px;
+}
+
+.active {
+  border-color: black;
+  border-width: 3px;
+}
+
+.active:hover {
+  border-width: 3px;
+}
 
 /* Loader */
 
